<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <TextView 
        android:id="@+id/ip_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip_desc" />
    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="20dp"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="24sp"
        android:hint="@string/input_peer_ip" >

        <requestFocus />
    </EditText>
    <TextView 
        android:id="@+id/show_your_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/skip" />

    </LinearLayout>

</LinearLayout>
