<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_desc" />
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:src="@drawable/ic_transmit" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btn_start_service"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/start_service" />

        <Button
            android:id="@+id/btn_skip_service"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/skip_service" />

    </LinearLayout>

</LinearLayout>
